--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
+*.engine filter=lfs diff=lfs merge=lfs -text
 nvidia_tao_deploy/cv/centerpose/models/centerpose.engine filter=lfs diff=lfs merge=lfs -text
